# gglang

./: CMakeLists.txt  README.md  grammar.txt  main.cpp
src/: ErrorObserver.h  excalibur.h  gg.h  lexer.h  node.h  parser.h  token.h
src/main/: executor.h  lexer.h  parser.h
src/object/: gg_object.h  node.h  token.h
src/object/utils/: avalon.h  excalibur.h  gg_memory.h
